--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 
 <head>
     <title>Something</title>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" />                                            <!-- for emoji -->
     <link rel = "stylesheet" href = "index.css" />
 
 </head>
 <body>
-    <div class = "js-clock">  <!-- 클래스 명 지정 -->
-        <h1>00:00</h1> <!-- h1.clock-title 로 클래스명이 clock-title 인 h1 생성 가능 -->
+    <div class = "js-clock">                                            <!-- 클래스 명 지정 -->
+        <h1>00:00</h1>                                                  <!-- h1.clock-title 로 클래스명이 clock-title 인 h1 생성 가능 -->
     </div>
-        <form class = "js-form form">
-            <input type = "text" placeholder="what is your name" />
+        <form class = "js-form form">                                   <!-- create formType js-form -->
+            <input type = "text" placeholder="what is your name" />     
         </form>
         <h4 class = "js-greetings greetings"></h4>
         <form class="js-toDoForm">
-            <input type="text" placeholder="Write a to do" />
+            <input type="text" placeholder="Write a to do" />           <!-- create inputType for text 희미한 글씨로 write a to do -->
         </form>
-        <ul class="js-toDoList">
-        </ul>
+        <ul class="js-toDoList">                                        <!-- create ulType class name js-toDoList -->
+        </ul>                                                           <!-- ul end -->
 
-        <script src = "clock.js"></script> <!-- clock.js 파일에서 불러들임 -->
+        <script src = "clock.js"></script>                              <!-- clock.js 파일에서 불러들임 -->
         <script src = "gretting.js"></script>
         <script src = "todo.js"></script>
 </body>
